# lidar_imu_calib

./: CMakeLists.txt  README.md  package.xml
include/: calibExRLidar2Imu.h
launch/: calib_exR_lidar2imu.launch
lidar_imu_calib/: CMakeLists.txt  package.xml
lidar_imu_calib/include/: calibExRLidar2Imu.h
lidar_imu_calib/launch/: calib_exR_lidar2imu.launch
src/: calib_exR_lidar2imu_node.cpp
src/lib/: calibExRLidar2Imu.cpp
